# matrix-zk-stark-dag-demo

./: .envrc  .gitmodules  .prettierignore  Cargo.toml  Makefile  README.md  demo_algorithm_showdown.sh  lakefile.lean  main.rs
.cargo/: cargo-wrapper.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
RumaLean/: StateRes.lean
ctopology/: Cargo.toml
ctopology/src/: lib.rs  main.rs
demo/: README.md  index.html
demo_unoptimized_guest/: Cargo.toml
demo_unoptimized_guest/src/: lib.rs
docs/: architectural-paths.md  deployment-guides.md  topological-reducer-speedup.md
ruma-zk-prover/: Cargo.toml  README.md
ruma-zk-prover/src/: main.rs
ruma-zk-topological-air/: Cargo.toml
ruma-zk-verifier/: Cargo.toml
ruma-zk-verifier/src/: lib.rs
ruma-zk-wasm/: Cargo.toml
ruma-zk/src/: main.rs
ruma_zk_guest/: Cargo.toml
scripts/: http_wrapper.py
src/: lib.rs
src/client/: Cargo.toml
src/guest/: Cargo.toml  main.rs
src/guest-unoptimized/: Cargo.toml  main.rs
src/guest-unoptimized/src/: lib.rs
src/guest/src/: lib.rs
src/host/: Cargo.toml  fixtures.rs  main.rs
src/server/: Cargo.toml  build.rs  main.rs
src/wasm-client/: Cargo.toml
src/wasm-client/src/: lib.rs
