[package]
name = "ctopology"
version = "0.1.0"
edition = "2021"

[dependencies]
# Plonky3 primitives
p3-field = { git = "https://github.com/Plonky3/Plonky3" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3" }

# High-performance hashing and processing
ruma-lean = "0.1.1"
tiny-keccak = { version = "2.0", features = ["keccak"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.8"
bincode = "1.3"
ahash = "0.8"
rayon = "1.8"
