[package]
name = "zk-matrix-join-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zk-matrix-join-server"
path = "main.rs"

[dependencies]
sp1-sdk = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
sp1-build = "3.0.0"
